<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/game_mode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/game_mode"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_mode_label"
        android:layout_centerHorizontal="true" >

		<ImageView
	        android:id="@+id/pvp_choice"
	        android:layout_width="80dp"
	        android:layout_height="80dp"
	        android:src="@drawable/pvpgrey"
	        android:layout_marginRight="20dp"
	        android:contentDescription="@string/pvp_image"/>
		
		 <ImageView
            android:id="@+id/pve_choice"
	        android:layout_width="80dp"
	        android:layout_height="80dp"
            android:src="@drawable/pvegrey"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/pve_image"/>
        
    </LinearLayout>

</RelativeLayout>