<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/starting_piece_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/starting_piece"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/starting_piece_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" >

		<ImageView
	        android:id="@+id/piece_x_choice"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/piecexgrey"
	        android:layout_marginRight="20dp"
			android:contentDescription="@string/piece_x_image"/>
		
		 <ImageView
            android:id="@+id/piece_o_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pieceogrey"
            android:layout_marginLeft="20dp" 
            android:contentDescription="@string/piece_o_image"/>
        
    </LinearLayout>

</RelativeLayout>